--- a/StockMonitor/StockMonitor.csproj
+++ b/StockMonitor/StockMonitor.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="MailKit" Version="4.11.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.10" />
+    <PackageReference Include="Spectre.Console" Version="0.53.0" />
     <PackageReference Include="YahooFinanceApi" Version="2.3.3" />
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
