Mudando o .env de local

--- a/StockMonitor/StockMonitor.csproj
+++ b/StockMonitor/StockMonitor.csproj
@@ -21,9 +21,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update=".env">
+    <Content Include=".env">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
   </ItemGroup>
 
 </Project>
