--- a/StockMonitor/StockMonitor.csproj
+++ b/StockMonitor/StockMonitor.csproj
@@ -21,9 +21,4 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <Content Include=".env">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-</Project>
+      </ItemGroup></Project>
