--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '9.0.x' # Assuming .NET 9.0 based on project files
+        dotnet-version: '9.0.x'
 
     - name: Restore dependencies
       run: dotnet restore StockMonitorSolution.sln
@@ -37,7 +37,7 @@ jobs:
 
     - name: Run Docker container (for verification)
       run: |
-        CONTAINER_ID=$(docker run -d --env-file StockMonitor/.env stockmonitor PETR4 32.16 32.00)
+        CONTAINER_ID=$(docker run -d --env-file StockMonitor/.env stockmonitor PETR4 40.00 28.00)
         echo "Started container with ID: $CONTAINER_ID"
         sleep 15 # Wait for 30 seconds to allow the application to start and potentially log errors
         docker stop $CONTAINER_ID
