--- a/StockMonitor/appsettings.json
+++ b/StockMonitor/appsettings.json
@@ -4,8 +4,28 @@
     "SmtpServidor": "smtp.gmail.com",
     "SmtpPorta": 587,
     "SmtpUsuario": "stockmonitorinoa@gmail.com",
-    "SmtpSenha": "" 
+    "SmtpSenha": ""
   },
+  "Stocks": [
+    {
+      "Ticker": "PETR4",
+      "SellPrice": 28.0,
+      "BuyPrice": 25.0,
+      "SmaPeriod": 5
+    },
+    {
+      "Ticker": "VALE3",
+      "SellPrice": 60.0,
+      "BuyPrice": 50.0,
+      "SmaPeriod": 3
+    },
+    {
+      "Ticker": "MGLU3",
+      "SellPrice": 10.50,
+      "BuyPrice": 7.50,
+      "SmaPeriod": 2
+    }
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Information",
