--- a/StockMonitor/appsettings.json
+++ b/StockMonitor/appsettings.json
@@ -1,6 +1,6 @@
 {
   "SmtpSettings": {
-    "EmailDestino": "matandradefe@gmail.com",
+    "EmailDestino": "seu-email@gmail.com",
     "SmtpServidor": "smtp.gmail.com",
     "SmtpPorta": 587,
     "SmtpUsuario": "stockmonitorinoa@gmail.com",
@@ -9,18 +9,18 @@
   "Stocks": [
     {
       "Ticker": "PETR4",
-      "SellPrice": 28.0,
+      "SellPrice": 40.0,
       "BuyPrice": 25.0,
       "SmaPeriod": 5
     },
     {
       "Ticker": "VALE3",
-      "SellPrice": 60.0,
+      "SellPrice": 80.0,
       "BuyPrice": 50.0,
       "SmaPeriod": 3
     },
     {
-      "Ticker": "MGLU3",
+      "Ticker": "MGLUF3",
       "SellPrice": 10.50,
       "BuyPrice": 7.50,
       "SmaPeriod": 2
