Mudanças no README

--- a/StockMonitor/appsettings.json
+++ b/StockMonitor/appsettings.json
@@ -20,7 +20,7 @@
       "SmaPeriod": 3
     },
     {
-      "Ticker": "MGLUF3",
+      "Ticker": "MGLU3",
       "SellPrice": 10.50,
       "BuyPrice": 7.50,
       "SmaPeriod": 2
